# splitt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: main.rs
