[package]
name = "splitt"
description = "Split text in your terminal"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/6km/splitt"
readme = "README.md"
keywords = ["macos", "linux", "cli", "tools", "tool", "text", "split", "text-processing"]
categories = ["command-line-utilities"]

[[bin]]
path = "src/main.rs"
name = "splitt"

[dependencies]
clap = {version="4.5.34", features=["derive"]}